// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a Faithful request (golden) > explicit Fidedigno goes through exactly as before 1`] = `
{
  "blueprint": {
    "root": {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "props": {
                    "title": "Opções de áudio",
                  },
                  "type": "InteractivityButton",
                },
                {
                  "props": {
                    "title": "Lances da partida",
                  },
                  "type": "InteractivityButton",
                },
                {
                  "props": {
                    "title": "Vote no Craque do Jogo",
                  },
                  "type": "InteractivityButton",
                },
                {
                  "props": {
                    "title": "Estatísticas",
                  },
                  "type": "InteractivityButton",
                },
              ],
              "props": {
                "align": "end",
              },
              "type": "InteractivityMenu",
            },
            {
              "props": {
                "focusedItem": "program",
                "miscellaneousSubtitle": "São Paulo, SP",
                "miscellaneousTitle": "Previsão do tempo",
                "programSubtitle": "A seguir Central da Copa",
                "programTitle": "Copa do Mundo: Equador x Argentina",
              },
              "type": "MainMenu",
            },
          ],
          "props": {
            "direction": "vertical",
            "gap": "2xl",
            "justify": "end",
          },
          "type": "Stack",
        },
      ],
      "props": {
        "direction": "vertical",
        "gap": "sm",
        "grow": true,
        "justify": "end",
        "padding": "none",
      },
      "type": "Stack",
    },
    "screen": {
      "level": 1,
      "model": "home",
    },
    "version": 1,
  },
  "generator": [
    {
      "messages": [
        {
          "content": "Start from this screen — it is valid, and it is the shape the plan describes.
Keep its structure and change only what the plan asks for; drop what the plan
does not mention.

TEMPLATE "home" (Home):
{
  "version": 1,
  "screen": {
    "model": "home",
    "level": 1
  },
  "root": {
    "type": "Stack",
    "props": {
      "direction": "vertical",
      "justify": "end",
      "gap": "sm",
      "padding": "none",
      "grow": true
    },
    "children": [
      {
        "type": "Stack",
        "props": {
          "direction": "vertical",
          "justify": "end",
          "gap": "2xl"
        },
        "children": [
          {
            "type": "InteractivityMenu",
            "props": {
              "align": "end"
            },
            "children": [
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Opções de áudio"
                }
              },
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Lances da partida"
                }
              },
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Vote no Craque do Jogo"
                }
              },
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Estatísticas"
                }
              }
            ]
          },
          {
            "type": "MainMenu",
            "props": {
              "focusedItem": "program",
              "miscellaneousTitle": "Previsão do tempo",
              "miscellaneousSubtitle": "São Paulo, SP",
              "programTitle": "Copa do Mundo: Equador x Argentina",
              "programSubtitle": "A seguir Central da Copa"
            }
          }
        ]
      }
    ]
  }
}

Build exactly this plan as the Blueprint JSON.

PLAN:
Template: home
Screen: model "home", level 1
1. Root Stack

Original request (the plan is authoritative for what to build; this is also the language for "notes", each "deviation.why" and a Proposal's "description"):
Home com uma notificação de gol, e se possível o trilho",
          "role": "user",
        },
        {
          "content": "{"version":1,"screen":{"model":"home","level":1},"root":{"type":"Stack","props":{"direction":"vertical","justify":"end","gap":"sm","padding":"none","grow":true,"bogus":1},"children":[{"type":"Stack","props":{"direction":"vertical","justify":"end","gap":"2xl"},"children":[{"type":"InteractivityMenu","props":{"align":"end"},"children":[{"type":"InteractivityButton","props":{"title":"Opções de áudio"}},{"type":"InteractivityButton","props":{"title":"Lances da partida"}},{"type":"InteractivityButton","props":{"title":"Vote no Craque do Jogo"}},{"type":"InteractivityButton","props":{"title":"Estatísticas"}}]},{"type":"MainMenu","props":{"focusedItem":"program","miscellaneousTitle":"Previsão do tempo","miscellaneousSubtitle":"São Paulo, SP","programTitle":"Copa do Mundo: Equador x Argentina","programSubtitle":"A seguir Central da Copa"}}]}]}}",
          "role": "assistant",
        },
        {
          "content": "That Blueprint is invalid:
- root <Stack>: unknown prop "bogus".

Return the corrected JSON — same structure, only fixing these problems. Do not mention the fixes in "notes".",
          "role": "user",
        },
      ],
      "mode": "faithful",
      "system": "50a006557c034f79",
    },
    {
      "messages": [
        {
          "content": "Start from this screen — it is valid, and it is the shape the plan describes.
Keep its structure and change only what the plan asks for; drop what the plan
does not mention.

TEMPLATE "home" (Home):
{
  "version": 1,
  "screen": {
    "model": "home",
    "level": 1
  },
  "root": {
    "type": "Stack",
    "props": {
      "direction": "vertical",
      "justify": "end",
      "gap": "sm",
      "padding": "none",
      "grow": true
    },
    "children": [
      {
        "type": "Stack",
        "props": {
          "direction": "vertical",
          "justify": "end",
          "gap": "2xl"
        },
        "children": [
          {
            "type": "InteractivityMenu",
            "props": {
              "align": "end"
            },
            "children": [
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Opções de áudio"
                }
              },
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Lances da partida"
                }
              },
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Vote no Craque do Jogo"
                }
              },
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Estatísticas"
                }
              }
            ]
          },
          {
            "type": "MainMenu",
            "props": {
              "focusedItem": "program",
              "miscellaneousTitle": "Previsão do tempo",
              "miscellaneousSubtitle": "São Paulo, SP",
              "programTitle": "Copa do Mundo: Equador x Argentina",
              "programSubtitle": "A seguir Central da Copa"
            }
          }
        ]
      }
    ]
  }
}

Build exactly this plan as the Blueprint JSON.

PLAN:
Template: home
Screen: model "home", level 1
1. Root Stack

Original request (the plan is authoritative for what to build; this is also the language for "notes", each "deviation.why" and a Proposal's "description"):
Home com uma notificação de gol, e se possível o trilho",
          "role": "user",
        },
        {
          "content": "{"version":1,"screen":{"model":"home","level":1},"root":{"type":"Stack","props":{"direction":"vertical","justify":"end","gap":"sm","padding":"none","grow":true,"bogus":1},"children":[{"type":"Stack","props":{"direction":"vertical","justify":"end","gap":"2xl"},"children":[{"type":"InteractivityMenu","props":{"align":"end"},"children":[{"type":"InteractivityButton","props":{"title":"Opções de áudio"}},{"type":"InteractivityButton","props":{"title":"Lances da partida"}},{"type":"InteractivityButton","props":{"title":"Vote no Craque do Jogo"}},{"type":"InteractivityButton","props":{"title":"Estatísticas"}}]},{"type":"MainMenu","props":{"focusedItem":"program","miscellaneousTitle":"Previsão do tempo","miscellaneousSubtitle":"São Paulo, SP","programTitle":"Copa do Mundo: Equador x Argentina","programSubtitle":"A seguir Central da Copa"}}]}]}}",
          "role": "assistant",
        },
        {
          "content": "That Blueprint is invalid:
- root <Stack>: unknown prop "bogus".

Return the corrected JSON — same structure, only fixing these problems. Do not mention the fixes in "notes".",
          "role": "user",
        },
      ],
      "mode": "faithful",
      "system": "50a006557c034f79",
    },
  ],
  "issues": [],
  "mode": "faithful",
  "notices": undefined,
  "ok": true,
  "planner": [
    {
      "effort": "low",
      "messages": [
        {
          "content": "Home com uma notificação de gol, e se possível o trilho",
          "role": "user",
        },
      ],
      "system": "208ea51c82a8a0cb",
    },
  ],
  "steps": [
    "prompt: "Home com uma notificação de gol, e se possível o trilho"",
    "design system: ScreenFlow v1.0.0 (17 components)",
    "step 0 · router: explicit faithful",
    "step 1 · planner: 3-line plan · template: home (named)",
    "step 3 · validate: attempt 1 had 1 issue(s)",
    "step 2 · generator: valid on attempt 2",
  ],
  "trace": [
    {
      "attempt": 1,
      "issues": [
        {
          "message": "root <Stack>: unknown prop "bogus".",
          "path": [
            "root",
            "props",
            "bogus",
          ],
          "ruleId": "component.api",
        },
      ],
      "plan": 0,
    },
  ],
  "tree": [
    {
      "id": "screen-1",
      "mode": "faithful",
      "tree": {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [],
                    "props": {
                      "advertisingLabel": "",
                      "check": false,
                      "interactionState": "default",
                      "live": false,
                      "overline": "",
                      "subtitle": "",
                      "title": "Opções de áudio",
                    },
                    "type": "InteractivityButton",
                  },
                  {
                    "children": [],
                    "props": {
                      "advertisingLabel": "",
                      "check": false,
                      "interactionState": "default",
                      "live": false,
                      "overline": "",
                      "subtitle": "",
                      "title": "Lances da partida",
                    },
                    "type": "InteractivityButton",
                  },
                  {
                    "children": [],
                    "props": {
                      "advertisingLabel": "",
                      "check": false,
                      "interactionState": "default",
                      "live": false,
                      "overline": "",
                      "subtitle": "",
                      "title": "Vote no Craque do Jogo",
                    },
                    "type": "InteractivityButton",
                  },
                  {
                    "children": [],
                    "props": {
                      "advertisingLabel": "",
                      "check": false,
                      "interactionState": "default",
                      "live": false,
                      "overline": "",
                      "subtitle": "",
                      "title": "Estatísticas",
                    },
                    "type": "InteractivityButton",
                  },
                ],
                "props": {
                  "align": "end",
                  "heading": "",
                },
                "type": "InteractivityMenu",
              },
              {
                "children": [],
                "props": {
                  "focusedItem": "program",
                  "miscellaneousItems": [],
                  "miscellaneousSubtitle": "São Paulo, SP",
                  "miscellaneousTitle": "Previsão do tempo",
                  "programSubtitle": "A seguir Central da Copa",
                  "programTitle": "Copa do Mundo: Equador x Argentina",
                },
                "type": "MainMenu",
              },
            ],
            "props": {
              "align": "stretch",
              "bordered": false,
              "direction": "vertical",
              "gap": "2xl",
              "grow": false,
              "justify": "end",
              "padding": "none",
              "radius": "none",
              "shadow": "none",
              "surface": "none",
            },
            "type": "Stack",
          },
        ],
        "props": {
          "align": "stretch",
          "bordered": false,
          "direction": "vertical",
          "gap": "sm",
          "grow": true,
          "justify": "end",
          "padding": "none",
          "radius": "none",
          "shadow": "none",
          "surface": "none",
        },
        "screen": {
          "level": 1,
          "model": "home",
        },
        "type": "Stack",
      },
    },
  ],
}
`;

exports[`a Faithful request (golden) > no mode goes through exactly as before 1`] = `
{
  "blueprint": {
    "root": {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "props": {
                    "title": "Opções de áudio",
                  },
                  "type": "InteractivityButton",
                },
                {
                  "props": {
                    "title": "Lances da partida",
                  },
                  "type": "InteractivityButton",
                },
                {
                  "props": {
                    "title": "Vote no Craque do Jogo",
                  },
                  "type": "InteractivityButton",
                },
                {
                  "props": {
                    "title": "Estatísticas",
                  },
                  "type": "InteractivityButton",
                },
              ],
              "props": {
                "align": "end",
              },
              "type": "InteractivityMenu",
            },
            {
              "props": {
                "focusedItem": "program",
                "miscellaneousSubtitle": "São Paulo, SP",
                "miscellaneousTitle": "Previsão do tempo",
                "programSubtitle": "A seguir Central da Copa",
                "programTitle": "Copa do Mundo: Equador x Argentina",
              },
              "type": "MainMenu",
            },
          ],
          "props": {
            "direction": "vertical",
            "gap": "2xl",
            "justify": "end",
          },
          "type": "Stack",
        },
      ],
      "props": {
        "direction": "vertical",
        "gap": "sm",
        "grow": true,
        "justify": "end",
        "padding": "none",
      },
      "type": "Stack",
    },
    "screen": {
      "level": 1,
      "model": "home",
    },
    "version": 1,
  },
  "generator": [
    {
      "messages": [
        {
          "content": "Start from this screen — it is valid, and it is the shape the plan describes.
Keep its structure and change only what the plan asks for; drop what the plan
does not mention.

TEMPLATE "home" (Home):
{
  "version": 1,
  "screen": {
    "model": "home",
    "level": 1
  },
  "root": {
    "type": "Stack",
    "props": {
      "direction": "vertical",
      "justify": "end",
      "gap": "sm",
      "padding": "none",
      "grow": true
    },
    "children": [
      {
        "type": "Stack",
        "props": {
          "direction": "vertical",
          "justify": "end",
          "gap": "2xl"
        },
        "children": [
          {
            "type": "InteractivityMenu",
            "props": {
              "align": "end"
            },
            "children": [
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Opções de áudio"
                }
              },
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Lances da partida"
                }
              },
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Vote no Craque do Jogo"
                }
              },
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Estatísticas"
                }
              }
            ]
          },
          {
            "type": "MainMenu",
            "props": {
              "focusedItem": "program",
              "miscellaneousTitle": "Previsão do tempo",
              "miscellaneousSubtitle": "São Paulo, SP",
              "programTitle": "Copa do Mundo: Equador x Argentina",
              "programSubtitle": "A seguir Central da Copa"
            }
          }
        ]
      }
    ]
  }
}

Build exactly this plan as the Blueprint JSON.

PLAN:
Template: home
Screen: model "home", level 1
1. Root Stack

Original request (the plan is authoritative for what to build; this is also the language for "notes", each "deviation.why" and a Proposal's "description"):
Home com uma notificação de gol, e se possível o trilho",
          "role": "user",
        },
        {
          "content": "{"version":1,"screen":{"model":"home","level":1},"root":{"type":"Stack","props":{"direction":"vertical","justify":"end","gap":"sm","padding":"none","grow":true,"bogus":1},"children":[{"type":"Stack","props":{"direction":"vertical","justify":"end","gap":"2xl"},"children":[{"type":"InteractivityMenu","props":{"align":"end"},"children":[{"type":"InteractivityButton","props":{"title":"Opções de áudio"}},{"type":"InteractivityButton","props":{"title":"Lances da partida"}},{"type":"InteractivityButton","props":{"title":"Vote no Craque do Jogo"}},{"type":"InteractivityButton","props":{"title":"Estatísticas"}}]},{"type":"MainMenu","props":{"focusedItem":"program","miscellaneousTitle":"Previsão do tempo","miscellaneousSubtitle":"São Paulo, SP","programTitle":"Copa do Mundo: Equador x Argentina","programSubtitle":"A seguir Central da Copa"}}]}]}}",
          "role": "assistant",
        },
        {
          "content": "That Blueprint is invalid:
- root <Stack>: unknown prop "bogus".

Return the corrected JSON — same structure, only fixing these problems. Do not mention the fixes in "notes".",
          "role": "user",
        },
      ],
      "mode": "faithful",
      "system": "50a006557c034f79",
    },
    {
      "messages": [
        {
          "content": "Start from this screen — it is valid, and it is the shape the plan describes.
Keep its structure and change only what the plan asks for; drop what the plan
does not mention.

TEMPLATE "home" (Home):
{
  "version": 1,
  "screen": {
    "model": "home",
    "level": 1
  },
  "root": {
    "type": "Stack",
    "props": {
      "direction": "vertical",
      "justify": "end",
      "gap": "sm",
      "padding": "none",
      "grow": true
    },
    "children": [
      {
        "type": "Stack",
        "props": {
          "direction": "vertical",
          "justify": "end",
          "gap": "2xl"
        },
        "children": [
          {
            "type": "InteractivityMenu",
            "props": {
              "align": "end"
            },
            "children": [
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Opções de áudio"
                }
              },
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Lances da partida"
                }
              },
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Vote no Craque do Jogo"
                }
              },
              {
                "type": "InteractivityButton",
                "props": {
                  "title": "Estatísticas"
                }
              }
            ]
          },
          {
            "type": "MainMenu",
            "props": {
              "focusedItem": "program",
              "miscellaneousTitle": "Previsão do tempo",
              "miscellaneousSubtitle": "São Paulo, SP",
              "programTitle": "Copa do Mundo: Equador x Argentina",
              "programSubtitle": "A seguir Central da Copa"
            }
          }
        ]
      }
    ]
  }
}

Build exactly this plan as the Blueprint JSON.

PLAN:
Template: home
Screen: model "home", level 1
1. Root Stack

Original request (the plan is authoritative for what to build; this is also the language for "notes", each "deviation.why" and a Proposal's "description"):
Home com uma notificação de gol, e se possível o trilho",
          "role": "user",
        },
        {
          "content": "{"version":1,"screen":{"model":"home","level":1},"root":{"type":"Stack","props":{"direction":"vertical","justify":"end","gap":"sm","padding":"none","grow":true,"bogus":1},"children":[{"type":"Stack","props":{"direction":"vertical","justify":"end","gap":"2xl"},"children":[{"type":"InteractivityMenu","props":{"align":"end"},"children":[{"type":"InteractivityButton","props":{"title":"Opções de áudio"}},{"type":"InteractivityButton","props":{"title":"Lances da partida"}},{"type":"InteractivityButton","props":{"title":"Vote no Craque do Jogo"}},{"type":"InteractivityButton","props":{"title":"Estatísticas"}}]},{"type":"MainMenu","props":{"focusedItem":"program","miscellaneousTitle":"Previsão do tempo","miscellaneousSubtitle":"São Paulo, SP","programTitle":"Copa do Mundo: Equador x Argentina","programSubtitle":"A seguir Central da Copa"}}]}]}}",
          "role": "assistant",
        },
        {
          "content": "That Blueprint is invalid:
- root <Stack>: unknown prop "bogus".

Return the corrected JSON — same structure, only fixing these problems. Do not mention the fixes in "notes".",
          "role": "user",
        },
      ],
      "mode": "faithful",
      "system": "50a006557c034f79",
    },
  ],
  "issues": [],
  "mode": "faithful",
  "notices": undefined,
  "ok": true,
  "planner": [
    {
      "effort": "low",
      "messages": [
        {
          "content": "Home com uma notificação de gol, e se possível o trilho",
          "role": "user",
        },
      ],
      "system": "208ea51c82a8a0cb",
    },
  ],
  "steps": [
    "prompt: "Home com uma notificação de gol, e se possível o trilho"",
    "design system: ScreenFlow v1.0.0 (17 components)",
    "step 1 · planner: 3-line plan · template: home (named)",
    "step 3 · validate: attempt 1 had 1 issue(s)",
    "step 2 · generator: valid on attempt 2",
  ],
  "trace": [
    {
      "attempt": 1,
      "issues": [
        {
          "message": "root <Stack>: unknown prop "bogus".",
          "path": [
            "root",
            "props",
            "bogus",
          ],
          "ruleId": "component.api",
        },
      ],
      "plan": 0,
    },
  ],
  "tree": [
    {
      "id": "screen-1",
      "mode": "faithful",
      "tree": {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [],
                    "props": {
                      "advertisingLabel": "",
                      "check": false,
                      "interactionState": "default",
                      "live": false,
                      "overline": "",
                      "subtitle": "",
                      "title": "Opções de áudio",
                    },
                    "type": "InteractivityButton",
                  },
                  {
                    "children": [],
                    "props": {
                      "advertisingLabel": "",
                      "check": false,
                      "interactionState": "default",
                      "live": false,
                      "overline": "",
                      "subtitle": "",
                      "title": "Lances da partida",
                    },
                    "type": "InteractivityButton",
                  },
                  {
                    "children": [],
                    "props": {
                      "advertisingLabel": "",
                      "check": false,
                      "interactionState": "default",
                      "live": false,
                      "overline": "",
                      "subtitle": "",
                      "title": "Vote no Craque do Jogo",
                    },
                    "type": "InteractivityButton",
                  },
                  {
                    "children": [],
                    "props": {
                      "advertisingLabel": "",
                      "check": false,
                      "interactionState": "default",
                      "live": false,
                      "overline": "",
                      "subtitle": "",
                      "title": "Estatísticas",
                    },
                    "type": "InteractivityButton",
                  },
                ],
                "props": {
                  "align": "end",
                  "heading": "",
                },
                "type": "InteractivityMenu",
              },
              {
                "children": [],
                "props": {
                  "focusedItem": "program",
                  "miscellaneousItems": [],
                  "miscellaneousSubtitle": "São Paulo, SP",
                  "miscellaneousTitle": "Previsão do tempo",
                  "programSubtitle": "A seguir Central da Copa",
                  "programTitle": "Copa do Mundo: Equador x Argentina",
                },
                "type": "MainMenu",
              },
            ],
            "props": {
              "align": "stretch",
              "bordered": false,
              "direction": "vertical",
              "gap": "2xl",
              "grow": false,
              "justify": "end",
              "padding": "none",
              "radius": "none",
              "shadow": "none",
              "surface": "none",
            },
            "type": "Stack",
          },
        ],
        "props": {
          "align": "stretch",
          "bordered": false,
          "direction": "vertical",
          "gap": "sm",
          "grow": true,
          "justify": "end",
          "padding": "none",
          "radius": "none",
          "shadow": "none",
          "surface": "none",
        },
        "screen": {
          "level": 1,
          "model": "home",
        },
        "type": "Stack",
      },
    },
  ],
}
`;
